Fixing layout on small devices

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -331,7 +331,6 @@ body {
 	background-color: #fff;
 	border: 1px solid darken($body_bg, 10%);
 	border-radius: 6px;
-	float: right;
 	margin-left: 65px;
 	padding: 20px;
 }
